--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class='wrap'>
         <div class='explanation'>
-            <img src='/static/how2.gif' style='width=100%; height=100%; object-fit:contain;'></img>
+            <img src='/static/main.gif' style='width=100%; height=100%; object-fit:contain;'></img>
         </div>
         <form action="{% url 'fitness:select' %}">
             <div class='start'>
