--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+    <style>
+        #title {
+            margin: 5vmin;
+        }
+    </style>
 </head>
 <body>
     <header>
         <a href="{% url 'fitness:index' %}">
-            <h1>With FITNESS</h1>
+            <h2 id="title">With FITNESS</h2>
         </a>
     </header>
     {% block content %}
