--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,23 @@
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     background-color: black;
     align-content: center;
     color: white;
     font-family: 'Do Hyeon', sans-serif;
+    position: fixed;
+    overflow: hidden;
   }
   
 /* base.html */
 header a {
     font-family: 'Orbitron', sans-serif;
     color: white;
-    text-align: center;
-    font-size: 50px;
+    /* text-align: center;
+    font-size: 50px; */
     text-decoration: none;
 }
 
@@ -19,18 +26,24 @@ header a {
     text-align: center;
 }
 
-/* .explanation {
-    background-color: rgb(21, 133, 59);
-} */
+.wrapper {
+    /* flex */
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center; /* 가운데 정렬 */
+    align-items: center; /* 세로 정렬 */
+    margin: 0 auto; /* 가운데 정렬 */
+}
 
 .explanation img {
-    max-width: 60%;
-    height: 60%;
+    max-width: 70%;
+    height: 70%;
 }
   
 .start {
     position: relative;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 /* exercise.html */
@@ -83,15 +96,35 @@ h3 {
     font-size: 30px;
 }
 
-.people {
-    /* display: inline-block;
-    padding: 20px; */
-    text-align: center;
+.radio div {
+    display: inline-block;
+    margin: 20px;
 }
 
-.people div{
+.radio input {
+    display: none;
+}
+
+label {
+    cursor: pointer;
+    /* margin: 10px 10px; */
+}
+
+label:before {
+    content: '';
     display: inline-block;
-    padding: 20px;
+    height: 30px;
+    width: 30px;
+    background: orange;
+    border-radius: 50%;
+    z-index: 2;
+    transition: box-shadow .4s ease, background .3s ease;
+}
+
+input:checked + label:before {
+    /* 수평 그림자 / 수직 그림자 / 선명도 / 확산 거리 */
+    box-shadow: inset 0px 0px 0 5px orange;
+    background: black;
 }
 
 p {
