--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -11,9 +12,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    {% comment %} <link rel="shortcut icon" href="{% static 'favicon.png' %}"> {% endcomment %}
+    {% comment %} <link rel="shortcut icon" href="{% static 'pig.png' %}"> {% endcomment %}
+    <link rel="shortcut icon" href="{% static 'fishpig.png' %}">
     <style>
         #title {
-            margin: 3vmin;
+            {% comment %} margin: 3vmin; {% endcomment %}
+            position: absolute;
+            {% comment %} margin-left: 20px;
+            margin-top: 20px; {% endcomment %}
+            font-size: 20px;
         }
     </style>
 </head>
