--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="wrapper">
     <form method='POST'>
         {% csrf_token %}
         <div class="select_exercise">
@@ -21,4 +22,5 @@
             </div>
         </div>
     </form>
+</div>
 {% endblock %}
