--- a/templates/play.html
+++ b/templates/play.html
@@ -2,8 +2,9 @@
 {% block content %}
 <style>
     #loading_image {
-        width: 400px;
-        height: 400px;
+        width: 1000px;
+        height: 1000px;
+        z-index: 10000;
     }
 </style>
 <div class='wrap'>
