--- a/templates/play.html
+++ b/templates/play.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block content %}<div class='wrap'>
+{% block content %}
+<div class='wrap'>
     <div id='timer'></div>
     <img src="http://210.106.97.32:8000/withfit/webcam" width="640" height="480" />
     <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/AaDBwFnDUZY?start=50&autoplay=1&mute=1" allow="autoplay;" allowfullscreen></iframe> -->
@@ -29,9 +30,4 @@
 
     } {% endcomment %}
 </script>
-.removeChild(child);
-    }
-   
-</script>
-
 {% endblock %}
