--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,11 @@
 {% block content %}
 <!-- ======= Hero Section ======= -->
 <section id="hero">
-  <div class="hero-container">
+  <video id="video-bgvid" width="100%" muted autoplay loop>
+    <source src="{% static 'img/main-bg.mp4' %}" type="video/mp4">
+    Sorry, your browser does not support HTML5 video.
+  </video>
+  <!-- <div class="hero-container">
     <h3>함께 운동하는 <strong>With-fit</strong></h3>
 
     <div id="hero-msg-1">
@@ -18,9 +22,8 @@
       <h1>운동종류와 인원수를 선택한 다음</h1>
       <h2>정확한 자세를 운동하고 결과를 확인하세요!</h2>
     </div>
-
     <a href="#about" class="btn-get-started scrollto">로그인하고 시작하기</a>
-  </div>
+  </div> -->
 </section>
 <!-- End Hero -->
 
