--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,22 +9,22 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'NeoDunggeunmo';
   color: #444444;
 }
 
 a {
-  color: #e43c5c;
+  color: #17ec91;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ea6981;
+  color: #c833ff;
   text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Nunito", sans-serif;
+  font-family: 'NeoDunggeunmo';
 }
 
 /*--------------------------------------------------------------
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #e43c5c;
+  background: #c833ff;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #e9607a;
+  background: #c833ff;
   color: #fff;
 }
 .back-to-top.active {
@@ -118,7 +118,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: "Poppins", sans-serif;
+  font-family: 'NeoDunggeunmo';
   /* color: rgba(70, 255, 154, 1); */
   color: #fff;
   font-size: 15px;
@@ -140,7 +140,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: -6px;
   left: 0;
-  background-color: #e43c5c;
+  background-color: #17ec91;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out 0s;
@@ -180,7 +180,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #e43c5c;
+  color: #17ec91;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -268,7 +268,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #493c3e;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -294,7 +294,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -377,7 +377,7 @@ h1, h2, h3, h4, h5, h6 {
 /*  */
 
 #hero .btn-get-started {
-  font-family: "Poppins", sans-serif;
+  font-family: 'NeoDunggeunmo';
   text-transform: uppercase;
   font-weight: 400;
   font-size: 13px;
@@ -390,8 +390,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 #hero .btn-get-started:hover {
-  background: #e43c5c;
-  border: 2px solid #e43c5c;
+  background: #c833ff;
+  border: 2px solid #c833ff;
 }
 @media (min-width: 1024px) {
   #hero {
@@ -435,14 +435,14 @@ section {
   padding-bottom: 30px;
 }
 .section-title h2 {
-  font-size: 13px;
+  font-size: 20px;
   letter-spacing: 1px;
   font-weight: 700;
   padding: 8px 20px;
   line-height: 1;
   margin: 0;
-  background: #fdeff2;
-  color: #e43c5c;
+  background: #c833ff;
+  color: #17ec91;
   display: inline-block;
   text-transform: uppercase;
   border-radius: 50px;
@@ -453,7 +453,7 @@ section {
   font-weight: 700;
 }
 .section-title h3 span {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .section-title p {
   margin: 15px auto 0 auto;
@@ -488,14 +488,14 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #e43c5c;
+  color: #c833ff;
   line-height: 1;
 }
 .about .content p:last-child {
   margin-bottom: 0;
 }
 .about .content .btn-learn-more {
-  font-family: "Nunito", sans-serif;
+  font-family: 'NeoDunggeunmo';
   font-weight: 600;
   font-size: 14px;
   letter-spacing: 1px;
@@ -504,14 +504,14 @@ section {
   border-radius: 50px;
   transition: 0.3s;
   line-height: 1;
-  color: #e43c5c;
+  color: #c833ff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #e43c5c;
+  border: 2px solid #c833ff;
 }
 .about .content .btn-learn-more:hover {
-  background: #e43c5c;
+  background: #c833ff;
   color: #fff;
   text-decoration: none;
 }
@@ -536,7 +536,7 @@ section {
 .services .icon-box::before {
   content: "";
   position: absolute;
-  background: #fdeff2;
+  background: #17ec91;
   right: 0;
   left: 0;
   bottom: 0;
@@ -545,7 +545,7 @@ section {
   z-index: -1;
 }
 .services .icon-box:hover::before {
-  background: #e43c5c;
+  background: #17ec91;
   top: 0;
   border-radius: 0px;
 }
@@ -555,7 +555,7 @@ section {
 .services .icon i {
   font-size: 48px;
   line-height: 1;
-  color: #e43c5c;
+  color: #c833ff;
   transition: all 0.3s ease-in-out;
 }
 .services .title {
@@ -608,7 +608,7 @@ section {
   transition: ease-in-out 0.3s;
 }
 .features .icon-box:hover a {
-  color: #e43c5c;
+  color: #c833ff;
 }
 
 /*--------------------------------------------------------------
@@ -628,7 +628,7 @@ section {
   color: #fff;
 }
 .cta .cta-btn {
-  font-family: "Nunito", sans-serif;
+  font-family: 'NeoDunggeunmo';
   text-transform: uppercase;
   font-weight: 500;
   font-size: 16px;
@@ -642,8 +642,8 @@ section {
   color: #fff;
 }
 .cta .cta-btn:hover {
-  background: #e43c5c;
-  border: 2px solid #e43c5c;
+  background: #c833ff;
+  border: 2px solid #c833ff;
 }
 @media (min-width: 1024px) {
   .cta {
@@ -676,7 +676,7 @@ section {
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #e43c5c;
+  background: #c833ff;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -698,7 +698,7 @@ section {
   bottom: -50px;
   z-index: 3;
   transition: all ease-in-out 0.3s;
-  background: #e43c5c;
+  background: #c833ff;
   padding: 15px 20px;
 }
 .portfolio .portfolio-item .portfolio-info h4 {
@@ -720,7 +720,7 @@ section {
   transition: ease-in-out 0.3s;
 }
 .portfolio .portfolio-item .portfolio-info .preview-link:hover, .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #f7c2cc;
+  color: #c833ff;
 }
 .portfolio .portfolio-item .portfolio-info .details-link {
   right: 15px;
@@ -751,10 +751,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #e43c5c;
+  border: 1px solid #c833ff;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #e43c5c;
+  background-color: #c833ff;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -809,9 +809,9 @@ section {
 }
 .pricing .box h4 {
   font-size: 42px;
-  color: #e43c5c;
+  color: #c833ff;
   font-weight: 500;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'NeoDunggeunmo';
   margin-bottom: 20px;
 }
 .pricing .box h4 sup {
@@ -836,7 +836,7 @@ section {
   padding-bottom: 16px;
 }
 .pricing .box ul i {
-  color: #e43c5c;
+  color: #c833ff;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -852,28 +852,28 @@ section {
   display: inline-block;
   padding: 8px 40px 10px 40px;
   border-radius: 50px;
-  border: 2px solid #e43c5c;
-  color: #e43c5c;
+  border: 2px solid #c833ff;
+  color: #c833ff;
   font-size: 14px;
   font-weight: 400;
-  font-family: "Nunito", sans-serif;
+  font-family: 'NeoDunggeunmo';
   font-weight: 600;
   transition: 0.3s;
 }
 .pricing .box .btn-buy:hover {
-  background: #e43c5c;
+  background: #c833ff;
   color: #fff;
 }
 .pricing .recommended {
-  border-color: #e43c5c;
+  border-color: #c833ff;
 }
 .pricing .recommended .btn-buy {
-  background: #e43c5c;
+  background: #c833ff;
   color: #fff;
 }
 .pricing .recommended .btn-buy:hover {
-  background: #d91e42;
-  border-color: #d91e42;
+  background: #c833ff;
+  border-color: #c833ff;
 }
 .pricing .recommended-badge {
   position: absolute;
@@ -884,7 +884,7 @@ section {
   font-size: 13px;
   padding: 3px 25px 6px 25px;
   background: #fce6ea;
-  color: #e43c5c;
+  color: #c833ff;
   border-radius: 50px;
 }
 
@@ -906,13 +906,13 @@ section {
 .faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #e43c5c;
+  font-family: #c833ff;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
   padding-left: 25px;
   cursor: pointer;
-  color: #d01d3f;
+  color: #17ec91;
   transition: 0.3s;
 }
 .faq .faq-list i {
@@ -932,7 +932,7 @@ section {
   color: black;
 }
 .faq .faq-list .collapsed:hover {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .faq .faq-list .collapsed .icon-show {
   display: inline-block;
@@ -992,7 +992,7 @@ section {
   line-height: 0;
 }
 .team .member .social a:hover {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .team .member .social i {
   font-size: 18px;
@@ -1032,11 +1032,11 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  color: #e43c5c;
+  color: #c833ff;
   float: left;
   width: 44px;
   height: 44px;
-  background: #fdeff2;
+  background: #17ec91;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1060,7 +1060,7 @@ section {
   margin-top: 40px;
 }
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #e43c5c;
+  background: #c833ff;
   color: #fff;
 }
 .contact .php-email-form {
@@ -1073,7 +1073,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #c833ff;
   text-align: left;
   padding: 15px;
   font-weight: 600;
@@ -1113,7 +1113,7 @@ section {
   font-size: 14px;
 }
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #e43c5c;
+  border-color: #c833ff;
 }
 .contact .php-email-form input {
   height: 44px;
@@ -1122,7 +1122,7 @@ section {
   padding: 10px 12px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #e43c5c;
+  background: #c833ff;
   border: 0;
   padding: 10px 28px;
   color: #fff;
@@ -1130,7 +1130,7 @@ section {
   border-radius: 50px;
 }
 .contact .php-email-form button[type=submit]:hover {
-  background: #d01d3f;
+  background: #17ec91;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1211,7 +1211,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-title a:hover {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .blog .entry .entry-meta {
   margin-bottom: 15px;
@@ -1248,7 +1248,7 @@ section {
 }
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #e43c5c;
+  background: #c833ff;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1256,7 +1256,7 @@ section {
   border-radius: 4px;
 }
 .blog .entry .entry-content .read-more a:hover {
-  background: #e7526f;
+  background: #c833ff;
 }
 .blog .entry .entry-content h3 {
   font-size: 22px;
@@ -1303,7 +1303,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-footer a:hover {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .blog .entry .entry-footer .cats {
   list-style: none;
@@ -1390,7 +1390,7 @@ section {
   transition: 0.3s;
 }
 .blog .blog-comments .comment h5 a:hover {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
@@ -1427,7 +1427,7 @@ section {
 }
 .blog .blog-comments .reply-form input:focus {
   box-shadow: none;
-  border-color: #f096a7;
+  border-color: #17ec91;
 }
 .blog .blog-comments .reply-form textarea {
   border-radius: 4px;
@@ -1436,7 +1436,7 @@ section {
 }
 .blog .blog-comments .reply-form textarea:focus {
   box-shadow: none;
-  border-color: #f096a7;
+  border-color: #17ec91;
 }
 .blog .blog-comments .reply-form .form-group {
   margin-bottom: 25px;
@@ -1471,7 +1471,7 @@ section {
   justify-content: center;
 }
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #e43c5c;
+  background: #c833ff;
 }
 .blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
   color: #fff;
@@ -1514,7 +1514,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #e43c5c;
+  background: #c833ff;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1524,7 +1524,7 @@ section {
   line-height: 0;
 }
 .blog .sidebar .search-form form button:hover {
-  background: #e64e6b;
+  background: #c833ff;
 }
 .blog .sidebar .categories ul {
   list-style: none;
@@ -1538,7 +1538,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .categories ul a:hover {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .blog .sidebar .categories ul a span {
   padding-left: 5px;
@@ -1562,7 +1562,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #e43c5c;
+  color: #c833ff;
 }
 .blog .sidebar .recent-posts time {
   display: block;
@@ -1592,8 +1592,8 @@ section {
 }
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #e43c5c;
-  background: #e43c5c;
+  border: 1px solid #c833ff;
+  background: #c833ff;
 }
 .blog .sidebar .tags ul a span {
   padding-left: 5px;
@@ -1628,7 +1628,7 @@ section {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: 'NeoDunggeunmo';
   color: #777777;
 }
 #footer .footer-top h4 {
@@ -1648,7 +1648,7 @@ section {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ea6981;
+  color: #17ec91;
   font-size: 18px;
   line-height: 1;
 }
@@ -1668,7 +1668,7 @@ section {
 }
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #e43c5c;
+  color: #c833ff;
 }
 #footer .footer-newsletter {
   font-size: 15px;
@@ -1687,7 +1687,7 @@ section {
   position: relative;
   border-radius: 50px;
   text-align: left;
-  border: 1px solid #f7c2cc;
+  border: 1px solid #c833ff;
 }
 #footer .footer-newsletter form input[type=email] {
   border: 0;
@@ -1703,14 +1703,14 @@ section {
   background: none;
   font-size: 15px;
   padding: 0 22px;
-  background: #e43c5c;
+  background: #c833ff;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #d01d3f;
+  background: #17ec91;
 }
 #footer .credits {
   padding-top: 5px;
@@ -1720,7 +1720,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #e43c5c;
+  background: #c833ff;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1732,7 +1732,7 @@ section {
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #d01d3f;
+  background: #17ec91;
   color: #fff;
   text-decoration: none;
 }
