--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
   <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'css/util.css' %}" rel="stylesheet" type="text/css" >
 
+	<link href="{% static 'fonts/iconic/css/material-design-iconic-font.min.css' %}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -56,8 +57,8 @@
           <li><a class="nav-link scrollto" href="#services">랭킹</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">About</a></li>
           <li><a class="nav-link scrollto" href="#team">FAQ</a></li>
-          <li><a href="blog.html">블로그</a></li>
-          <li class="dropdown"><a href="#"><span>운동</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a href="/signin">로그인</a></li>
+          <li class="dropdown"><a href=""><span>운동</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Deep Drop 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
