--- a/templates/signin.html
+++ b/templates/signin.html
@@ -4,20 +4,21 @@
 
 <section id="signin">
   <div class="container-login100">
-    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+    <!-- <div class="wrap-login100 m-t-30 p-l-55 p-r-55 p-t-55 p-b-54"> -->
+    <div class="wrap-login100 m-t-30 p-l-55 p-r-55">
       <form class="login100-form validate-form">
-        <span class="login100-form-title p-b-49">
-          Login
+        <span class="login100-form-title">
+          로그인
         </span>
 
         <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
-          <span class="label-input100">아이디</span>
+          <!-- <span class="label-input100">아이디</span> -->
           <input class="input100" type="text" name="username" placeholder="아이디">
           <span class="focus-input100" data-symbol="&#xf206;"></span>
         </div>
 
         <div class="wrap-input100 validate-input" data-validate="Password is required">
-          <span class="label-input100">비밀번호</span>
+          <!-- <span class="label-input100">비밀번호</span> -->
           <input class="input100" type="password" name="pass" placeholder="비밀번호">
           <span class="focus-input100" data-symbol="&#xf190;"></span>
         </div>
@@ -37,13 +38,7 @@
           </div>
         </div>
 
-        <div class="txt1 text-center p-t-54 p-b-20">
-          <span>
-            <!-- Or Sign Up Using -->
-          </span>
-        </div>
-
-        <div class="flex-c-m">
+        <div class="flex-c-m m-t-10">
           <a href="#" class="login100-social-item bg1">
             <i class="fa fa-facebook"></i>
           </a>
@@ -57,13 +52,12 @@
           </a>
         </div>
 
-        <div class="flex-col-c p-t-15">
-          <span class="txt1 p-b-17">
+        <div class="flex-col-c p-t-5">
+          <span class="txt1">
             아직 회원이 아니신가요?
           </span>
-
-          <a href="#" class="txt2">
-            회원가입
+          <a href="/signup">
+            <span class="txt2">회원가입</span>
           </a>
         </div>
       </form>
